Fixed incorrect import of summary.csv

--- a/report/report.tex
+++ b/report/report.tex
@@ -26,7 +26,7 @@
 % --- Title/Author ---
 \begin{document}
 \title{Hate Speech Classification: Effectiveness--Efficiency Trade-offs on Twitter}
-\author{\IEEEauthorblockN{Davide Marchi}\\\IEEEauthorblockA{Email: d.marchi5@studenti.unipi.it}}
+\author{\IEEEauthorblockN{Davide Marchi}\\\IEEEauthorblockA{Master's Degree Student, University of Pisa}\\\IEEEauthorblockA{Email: d.marchi5@studenti.unipi.it}}
 \maketitle
 
 % --- Abstract ---
@@ -97,8 +97,8 @@ Table~\ref{tab:summary} reports test macro-F1 and accuracy alongside estimated t
     table head=\toprule model & macro-F1 & accuracy & test~emissions~(kg) & train~emissions~(kg) \\\midrule,
     late after line=\\,
     table foot=\bottomrule
-]{summary_table.csv}{}{
-    \modelname{\csvcoli} & \csvcolii & \csvcoliii & \csvcoliv & \csvcolv
+]{../results/analysis/summary.csv}{}{
+    \modelname{\csvcoli} & \csvcolx & \csvcolvii & \csvcolvi & \csvcoliv
 }
 \end{table}
 
