Made plots fancy

--- a/report/report.tex
+++ b/report/report.tex
@@ -108,7 +108,7 @@ Figure~\ref{fig:pareto} shows the Pareto frontier of macro-F1 vs test emissions.
 
 \begin{figure}[!b]
     \centering
-    \includegraphics[width=0.9\linewidth]{../results/analysis/pareto_test_emissions.png}
+    \includegraphics[width=\linewidth]{../results/analysis/pareto_test_emissions.png}
     \caption{Macro-F1 vs test emissions with a Pareto frontier.}
     \label{fig:pareto}
 \end{figure}
